fix: mobile view title using position: absolute; was causing text overlap in title, this commit fixes that ✅

--- a/css/app.css
+++ b/css/app.css
@@ -19,3 +19,47 @@ input {
 .view {
 	margin-right: 2rem;
 }
+
+/** begin: fix margin caused by previous position:absolute; on  header */
+h1 {
+	font-size: 80px;
+	font-weight: 200;
+	text-align: center;
+	color: #b83f45;
+	-webkit-text-rendering: optimizeLegibility;
+	-moz-text-rendering: optimizeLegibility;
+	text-rendering: optimizeLegibility;
+	line-height: normal;
+	margin: 40px 0;
+}
+
+.todoapp {
+	margin: 0;
+}
+
+html body.body {
+	display: flex !important;
+	flex-direction: column;
+	align-items: center;
+}
+
+#app {
+	min-width: 45rem;
+}
+/** end: fix margin caused by previous position:absolute; on  header */
+
+@media screen and (max-width: 45rem) {
+	h1 {
+		font-size: 5rem;
+		margin: 20px 0;
+	}
+	#app {
+		min-width: 100%;
+	}
+}
+
+@media screen and (max-width: 40rem) {
+	h1 {
+		font-size: 4rem;
+	}
+}
